--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongodb_url="mongodb+srv://ReshmaAS:Ammadurga@cluster0.gg53hr9.mongodb.net/Employeedata?retryWrites=true&w=majority"
+mongodb_url="mongodb+srv://ReshmaAS:reshmaas1995@cluster0.gg53hr9.mongodb.net/Employeedata?retryWrites=true&w=majority"
